--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lcacollect-config"
-version = "1.0.1"
+version = "1.1.0"
 description = "This package contains shared config and utils to be used across LCAcollect backends."
 authors = ["Christian Kongsgaard <chrk@arkitema.com>"]
 repository = "https://github.com/lcacollect/shared-config-backend"
@@ -11,10 +11,10 @@ readme = "README.md"
 python = "^3.10"
 pydantic = "*"
 fastapi-azure-auth = "*"
-SQLAlchemy = {version = "==1.4.35", extras = ["asyncio"]}
+SQLAlchemy = {version = ">=1.4.35", extras = ["asyncio"]}
 sqlmodel = ">=0.0.8"
 asyncpg = "^0.26.0"
-strawberry-graphql = {extras = ["fastapi"], version = ">=0.126.0"}
+strawberry-graphql = {extras = ["fastapi"], version = ">=0.164.0"}
 aiocache = "*"
 
 [tool.poetry.group.dev.dependencies]
