--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -22,6 +22,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ env.python_version }}
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
@@ -48,6 +49,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ env.python_version }}
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
