--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lcacollect-config"
-version = "1.5.0"
+version = "1.5.1"
 description = "This package contains shared config and utils to be used across LCAcollect backends."
 authors = ["Christian Kongsgaard <chrk@arkitema.com>"]
 repository = "https://github.com/lcacollect/shared-config-backend"
@@ -19,6 +19,7 @@ asyncpg = {version = "^0.26.0", optional = true }
 msgraph-core = "*"
 sendgrid = "*"
 requests = "*"
+azure-identity = "*"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0"
