--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
 name = "lcacollect-config"
-version = "1.5.1"
+version = "1.6.0"
 description = "This package contains shared config and utils to be used across LCAcollect backends."
 authors = ["Christian Kongsgaard <chrk@arkitema.com>"]
 repository = "https://github.com/lcacollect/shared-config-backend"
-license = "LGPL-3.0-or-later"
+license = "Apache-2.0"
 readme = "README.md"
 
 [tool.poetry.dependencies]
