--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lcacollect-config"
-version = "1.8.0"
+version = "1.9.0"
 description = "This package contains shared config and utils to be used across LCAcollect backends."
 authors = ["Christian Kongsgaard <chrk@arkitema.com>"]
 repository = "https://github.com/lcacollect/shared-config-backend"
@@ -16,10 +16,10 @@ aiocache = "*"
 SQLAlchemy = {version = ">=1.4.35", extras = ["asyncio"], optional = true}
 sqlmodel = {version = ">=0.0.8", optional = true }
 asyncpg = {version = "^0.26.0", optional = true }
-msgraph-core = "*"
 sendgrid = "*"
 requests = "*"
 azure-identity = "*"
+msgraph-sdk = "^1.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0"
