--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ sendgrid = "*"
 requests = "*"
 azure-identity = "*"
 msgraph-sdk = "^1.2.0"
+greenlet = "3.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0"
