--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-pydantic = "^1.10.13"
+pydantic = "1.10.13"
 strawberry-graphql = {extras = ["fastapi"], version = ">=0.209.0"}
 fastapi-azure-auth = ">=4.0.0"
 aiocache = "*"
-SQLAlchemy = {version = ">=1.4.35", extras = ["asyncio"]}
-sqlmodel = ">=0.0.8" 
-asyncpg = {version = "^0.26.0", optional = true }
+SQLAlchemy = {version = "1.4.35", extras = ["asyncio"]}
+sqlmodel = "0.0.8" 
+asyncpg = "^0.29.0"
 sendgrid = "*"
 requests = "*"
 azure-identity = "*"
