Add dry-run of publish to test phase to ensure it is possible

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -38,6 +38,11 @@ jobs:
       - name: Run PyTest
         run:  poetry run pytest
 
+      - name: Dry-run Publish Package
+        run: poetry publish --build --dry-run
+        env:
+          POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
+
   publish:
     name: Publish Python
     runs-on: ubuntu-latest
