--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,7 +80,7 @@ env = [
     "AAD_GRAPH_SECRET=PLACEHOLDER",
     "DEFAULT_AD_FQDN=PLACEHOLDER",
     "SENDGRID_SECRET=c2VjcmV0",
-    "EMAIL_NOTIFICATION_FROM=no-reply@molio.com",
+    "EMAIL_NOTIFICATION_FROM=no-reply@arkitema.com",
     "INTERNAL_EMAIL_DOMAINS_LIST=arkitema,cowi,cowicloud",
 ]
 
